HexabeatChartEditer v1.00 とりあえず完成

--- a/Ched/Localization/FileFilterStrings.resx
+++ b/Ched/Localization/FileFilterStrings.resx
@@ -121,6 +121,6 @@
     <value>音声ファイル</value>
   </data>
   <data name="ChedFilter" xml:space="preserve">
-    <value>Ched専用形式</value>
+    <value>HexabeatChartEditer専用形式</value>
   </data>
 </root>
